complete freeletics_running

--- a/freeletics-running/freeletics_running/ios/Runner/Info.plist
+++ b/freeletics-running/freeletics_running/ios/Runner/Info.plist
@@ -41,5 +41,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    	<string>Use location</string>
+    	<key>NSLocationAlwaysUsageDescription</key>
+        	<string>Use location</string>
 </dict>
 </plist>
