--- a/freeletics-running/freeletics_running/android/app/src/main/AndroidManifest.xml
+++ b/freeletics-running/freeletics_running/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.freeletics_running">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
    <application
         android:label="freeletics_running"
         android:icon="@mipmap/ic_launcher">
@@ -18,6 +19,8 @@
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
+            <meta-data android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyDCCQvfJ-sZyVILVlwrFYg4mPFf28hGpfY"/>
             <!-- Displays an Android View that continues showing the launch screen
                  Drawable until Flutter paints its first frame, then this splash
                  screen fades out. A splash screen is useful to avoid any visual
