--- a/freeletics-running/freeletics_running/pubspec.yaml
+++ b/freeletics-running/freeletics_running/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   location: ^4.1.1
   flutter_polyline_points: ^0.2.6
   intl: ^0.17.0
+  interpolate: ^1.0.2+2
 
 
 dev_dependencies:
