--- a/freeletics-running/freeletics_running/pubspec.yaml
+++ b/freeletics-running/freeletics_running/pubspec.yaml
@@ -29,11 +29,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.0.1
-  location: ^4.1.1
+
   flutter_polyline_points: ^0.2.6
   intl: ^0.17.0
   interpolate: ^1.0.2+2
-
+  geocoding: ^2.0.0
+  provider: ^5.0.0
+  http: ^0.13.1
+  uuid: ^3.0.1
+  shared_preferences: ^2.0.5
+  equatable: ^2.0.0
+  geolocator: ^7.0.1
 
 dev_dependencies:
   flutter_test:
