--- a/freeletics-running/freeletics_running/android/app/src/main/AndroidManifest.xml
+++ b/freeletics-running/freeletics_running/android/app/src/main/AndroidManifest.xml
@@ -40,6 +40,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
        <meta-data android:name="com.google.android.geo.API_KEY"
-           android:value="AIzaSyDCCQvfJ-sZyVILVlwrFYg4mPFf28hGpfY"/>
+           android:value="Here API Key"/>
     </application>
 </manifest>
